Refactor and fix grammatical mistakes in handlers
Introduce new interfaces to increase abstraction level and define new
contracts (for keyboards and updateService).